# expense-app

./: .gitignore  Readme.md
api/: Cargo.toml  build.rs
api/src/: main.rs
api/src/services/: calculator.rs
api/src/utils/: logger.rs
expense-app-apis/: Cargo.toml  build.rs
expense-app-apis/src/: main.rs
expense-app-apis/src/services/: calculator.rs
expense-app-ui/: package-lock.json  package.json
expense-app-ui/src/: App.tsx
expense-app-ui/src/components/common/button/: index.css  index.tsx
expense-app-ui/src/components/common/icon/: icon_names.ts  index.tsx
expense-app-ui/src/components/common/input/: index.css  index.tsx
expense-app-ui/src/components/common/table/: column.ts  index.tsx
expense-app-ui/src/components/common/table/header/: cell.css  cell.tsx  index.tsx
expense-app-ui/src/components/common/table/tbody/: index.tsx
expense-app-ui/src/pages/: table.tsx
expense-app-ui/src/stories/common/: Button.stories.ts  Table..stories.ts
expense-app-ui/src/types/: Person.ts  Transaction.ts  common.ts
proto/: calculator.proto
ui/: .gitignore
ui/src/components/common/button/: index.tsx
ui/src/components/common/icon/: icons.json  index.css
ui/src/components/common/input/: index.css
ui/src/components/common/select/: index.css  index.tsx
ui/src/components/common/table/: column.ts  index.css  index.tsx  utils.ts
ui/src/components/common/table/tbody/: cell.tsx  index.tsx
ui/src/router/: index.tsx
ui/src/stories/common/: Icon.stories.ts  Input.stories.ts  Select.stories.ts  Table..stories.ts
ui/src/types/: Item.ts  Split.ts
