[package]
name = "expense-app-apis"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
tokio = { version = "1.42", features = ["full"] }
tonic-reflection = "0.12"
prost = "0.13"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "expense-app"
path = "src/main.rs"
